Uploaded image for project: 'JDK'
  1. JDK
  2. JDK-8357159

SwingNode renders incorrectly on D3D12 pipeline

XMLWordPrintable

      To reproduce this:

      1. Run EmbeddedSwing app

      java -jar apps/toys/EmbeddedSwing/dist/EmbeddedSwing.jar

      2. Click on "Jazz" in the left side panel

      3. Double-click on the "Jazz" folder in the main window

      BUG: the windows is redrawn below where it should be

      See the two attached images: SwingNode_Bad.png is the output of the d3d12 pipeline and SwingNode_Good.png is the output of the existing d3d pipeline.

      NOTE: This is visually similar to metal pipeline bug JDK-8350512.

            lkostyra Lukasz Kostyra
            kcr Kevin Rushforth
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated: