8357159: SwingNode renders incorrectly on D3D12 pipeline

TextureUploader did not respect srcx/srcy when calculating source
pointers for transfer